Update booking compare room
don’t style css with this page

--- a/Booking.html
+++ b/Booking.html
@@ -557,8 +557,113 @@
                 <span class="note">Không bao gồm thuế phí</span>
               </div>
               <div class="bt-select-room">
-                <a href=# class="btn-select">Chọn</a>
+                <a href=# class="btn-select" data-toggle="modal" data-target="#compareroom">Chọn</a>
               </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="compareroom" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLongTitle">Deluxe King </h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 in-modal-body">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 item-room">
+            <h4 class="title-item-room">Deluxe King A</h4>
+            <a href="#" class="img-item-room">
+              <img src="assets/images/album-img1.jpg" />
+            </a>
+            <ul>
+              <li>
+                <span>Diện tích: 24m2</span>
+              </li>
+              <li>
+                <span>Thông tin:The plush mattresses and feather-soft pillows are especially inviting after a long day of exploring Ho Chi Minh City or attending business meetings.
+The room is set up with one king size bed (1.8m x 2m); however, the space does not allow for the addition of a third bed.</span>
+              </li>
+              <li>
+                <span>Tiện ích: Room only
+LCD TV with satellite cable programs
+Complimentary hi speed internet in room
+Complimentary bottle of water
+Minibar
+Coffee and tea making facilities
+Safe deposit box in room
+Walk in shower
+Bathroom amenities
+Hair dryer
+IDD phone
+Air conditioner</span>
+              </li>
+              <li>
+                <span>Giá:</span>
+              </li>
+              <li>
+                <a href="#" class="booking-item-room">Đặt phòng</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 item-room">
+            <h4 class="title-item-room">Deluxe King B</h4>
+            <a href="#" class="img-item-room">
+              <img src="assets/images/album-img2.jpg" />
+            </a>
+            <ul>
+              <li>
+                <span>Diện tích: 24m2</span>
+              </li>
+              <li>
+                <span>Thông tin</span>
+              </li>
+              <li>
+                <span>Tiện ích</span>
+              </li>
+              <li>
+                <span>Giá:</span>
+              </li>
+              <li>
+                <a href="#" class="booking-item-room">Đặt phòng</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 item-room">
+            <h4 class="title-item-room">Deluxe King C</h4>
+            <a href="#" class="img-item-room">
+              <img src="assets/images/album-img3.jpg" />
+            </a>
+            <ul>
+              <li>
+                <span>Diện tích: 24m2</span>
+              </li>
+              <li>
+                <span>Thông tin</span>
+              </li>
+              <li>
+                <span>Tiện ích</span>
+              </li>
+              <li>
+                <span>Giá:</span>
+              </li>
+              <li>
+                <a href="#" class="booking-item-room">Đặt phòng</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
             </div>
         </div>
       </div>
