--- a/Booking.html
+++ b/Booking.html
@@ -583,26 +583,23 @@
                 <span>Diện tích: 24m2</span>
               </li>
               <li>
-                <span>Thông tin:The plush mattresses and feather-soft pillows are especially inviting after a long day of exploring Ho Chi Minh City or attending business meetings.
-The room is set up with one king size bed (1.8m x 2m); however, the space does not allow for the addition of a third bed.</span>
+                <span>Thông tin:The plush mattresses and feather-soft pillows are especially inviting after a long day of exploring Ho Chi Minh City or attending business meetings.</span>
               </li>
               <li>
                 <span>Tiện ích: Room only
-LCD TV with satellite cable programs
-Complimentary hi speed internet in room
-Complimentary bottle of water
-Minibar
-Coffee and tea making facilities
-Safe deposit box in room
-Walk in shower
-Bathroom amenities
-Hair dryer
-IDD phone
-Air conditioner</span>
+<br /><i class="fa fa-circle" aria-hidden="true"></i>LCD TV with satellite cable programs
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary hi speed internet in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary bottle of water
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Minibar
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Coffee and tea making facilities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Safe deposit box in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Walk in shower
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Bathroom amenities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Hair dryer
+<br /><i class="fa fa-circle" aria-hidden="true"></i>IDD phone
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Air conditioner</span>
               </li>
-              <li>
-                <span>Giá:</span>
-              </li>
+
               <li>
                 <a href="#" class="booking-item-room">Đặt phòng</a>
               </li>
@@ -618,14 +615,23 @@ Air conditioner</span>
                 <span>Diện tích: 24m2</span>
               </li>
               <li>
-                <span>Thông tin</span>
+                <span>Thông tin:The plush mattresses and feather-soft pillows are especially inviting after a long day of exploring Ho Chi Minh City or attending business meetings.</span>
               </li>
               <li>
-                <span>Tiện ích</span>
+                <span>Tiện ích: Room only
+<br /><i class="fa fa-circle" aria-hidden="true"></i>LCD TV with satellite cable programs
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary hi speed internet in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary bottle of water
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Minibar
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Coffee and tea making facilities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Safe deposit box in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Walk in shower
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Bathroom amenities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Hair dryer
+<br /><i class="fa fa-circle" aria-hidden="true"></i>IDD phone
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Air conditioner</span>
               </li>
-              <li>
-                <span>Giá:</span>
-              </li>
+              
               <li>
                 <a href="#" class="booking-item-room">Đặt phòng</a>
               </li>
@@ -641,14 +647,23 @@ Air conditioner</span>
                 <span>Diện tích: 24m2</span>
               </li>
               <li>
-                <span>Thông tin</span>
+                <span>Thông tin:The plush mattresses and feather-soft pillows are especially inviting after a long day of exploring Ho Chi Minh City or attending business meetings.</span>
               </li>
               <li>
-                <span>Tiện ích</span>
+                <span>Tiện ích: Room only
+<br /><i class="fa fa-circle" aria-hidden="true"></i>LCD TV with satellite cable programs
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary hi speed internet in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Complimentary bottle of water
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Minibar
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Coffee and tea making facilities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Safe deposit box in room
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Walk in shower
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Bathroom amenities
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Hair dryer
+<br /><i class="fa fa-circle" aria-hidden="true"></i>IDD phone
+<br /><i class="fa fa-circle" aria-hidden="true"></i>Air conditioner</span>
               </li>
-              <li>
-                <span>Giá:</span>
-              </li>
+
               <li>
                 <a href="#" class="booking-item-room">Đặt phòng</a>
               </li>
@@ -657,7 +672,7 @@ Air conditioner</span>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
       </div>
     </div>
   </div>
