--- a/Khuyen-mai.html
+++ b/Khuyen-mai.html
@@ -48,7 +48,7 @@
 
 <body>
   <div class="se-pre-con"></div>
-<div class="wrapper" id="home">
+<div class="wrapper" id="sub-home">
 
     <section class="top">
             <div class="header">
@@ -158,22 +158,28 @@
                                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                         <ul class="nav navbar-nav navbar-custom">
                                             <li>
-                                                <a href="#">House Types
+                                                <a href="#">Trang chủ
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">About us
+                                                <a href="#">Phòng nghỉ
                                                 </a>
                                             </li>
 
                                             <li>
-                                              <a href="#">Inspiration</a>
+                                              <a href="#">Ẩm thực</a>
                                             </li>
                                             <li>
-                                              <a href="#">Go Green</a>
+                                              <a href="#">Hội nghị</a>
                                             </li>
                                             <li>
-                                              <a href="#">Dealers</a>
+                                              <a href="#">Tiện nghi</a>
+                                            </li>
+                                            <li>
+                                              <a href="#">Khuyến mại</a>
+                                            </li>
+                                            <li>
+                                              <a href="#">Hình ảnh</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -238,7 +244,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-album">
         <ul class="box-list-album">
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img1.jpg">
               <img src="assets/images/album-img1.jpg" />
             </a>
@@ -247,7 +253,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img2.jpg">
               <img src="assets/images/album-img2.jpg" />
             </a>
@@ -256,7 +262,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img3.jpg">
               <img src="assets/images/album-img3.jpg" />
             </a>
@@ -265,7 +271,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img4.jpg">
               <img src="assets/images/album-img4.jpg" />
             </a>
@@ -274,7 +280,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img5.jpg">
               <img src="assets/images/album-img5.jpg" />
             </a>
@@ -283,7 +289,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img6.jpg">
               <img src="assets/images/album-img6.jpg" />
             </a>
@@ -292,7 +298,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img1.jpg">
               <img src="assets/images/album-img1.jpg" />
             </a>
@@ -301,7 +307,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img2.jpg">
               <img src="assets/images/album-img2.jpg" />
             </a>
@@ -310,7 +316,7 @@
               <span>Dành cho các phòng Executive, SIgnature...</span>
             </div>
           </li>
-          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+          <li class="col-lg-4 col-sm-4 col-xs-12 col-md-4 list-album-item">
             <a data-fancybox="gallery" href="assets/images/album-img3.jpg">
               <img src="assets/images/album-img3.jpg" />
             </a>
