--- a/Select-rooms.html
+++ b/Select-rooms.html
@@ -44,7 +44,7 @@
 
 <body>
   <div class="se-pre-con"></div>
-<div class="wrapper" id="home">
+<div class="wrapper" id="sub-home">
 
     <section class="top">
             <div class="header">
@@ -154,22 +154,28 @@
                                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                         <ul class="nav navbar-nav navbar-custom">
                                             <li>
-                                                <a href="#">House Types
+                                                <a href="#">Trang chủ
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">About us
+                                                <a href="#">Phòng nghỉ
                                                 </a>
                                             </li>
 
                                             <li>
-                                              <a href="#">Inspiration</a>
+                                              <a href="#">Ẩm thực</a>
                                             </li>
                                             <li>
-                                              <a href="#">Go Green</a>
+                                              <a href="#">Hội nghị</a>
                                             </li>
                                             <li>
-                                              <a href="#">Dealers</a>
+                                              <a href="#">Tiện nghi</a>
+                                            </li>
+                                            <li>
+                                              <a href="#">Khuyến mại</a>
+                                            </li>
+                                            <li>
+                                              <a href="#">Hình ảnh</a>
                                             </li>
                                         </ul>
                                     </div>
