Update icon Social at footer
html and css

--- a/Khuyen-mai.html
+++ b/Khuyen-mai.html
@@ -411,7 +411,26 @@
           <input type="text" placeholder="E-mail của bạn" />
           <a href="#" class="btn-send-home">Gửi</a>
         </form>
-
+        <ul>
+          <li>
+            <a href="#" class="ic-youtube"><i class="fa fa-youtube" aria-hidden="true"></i>
+</a>
+          </li>
+          <li>
+            <a href="#" class="ic-googleplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="#" class="ic-facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="#" class="ic-twiter"><i class="fa fa-twitter" aria-hidden="true"></i>
+</a>
+          </li>
+          <li>
+            <a href="#" class="ic-insta"><i class="fa fa-instagram" aria-hidden="true"></i>
+</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
