Update html + css
- Dropdown
- Add image to langugaes
- Full navigation color background

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <ul>
                           <li class="on-top-nav">
                             <a href="#">Khách sạn</a>
+
                           </li>
                           <li class="on-top-nav">
                             <a href="#">Liên hệ</a>
@@ -65,11 +66,11 @@
                           <li class="on-top-nav">
                             <div class="dropdown show">
                               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Tiếng Việt<i class="fa fa-caret-down" aria-hidden="true"></i>
+                                <img src="assets/images/flag-vn.jpg" />Tiếng Việt<i class="fa fa-caret-down" aria-hidden="true"></i>
                               </a>
 
                               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <a class="dropdown-item" href="#">English</a>
+                                <a class="dropdown-item" href="#"><img src="assets/images/flag-usa.jpg" />English</a>
                               </div>
                             </div>
 
@@ -98,31 +99,71 @@
 
                                     <li class="main-nav">
                                         <a href="#">Phòng nghỉ
-</a>
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Signature Rooms</a>
+                                            <a href="#">Signature Rooms</a>
+                                            <a href="#">Signature Rooms</a>
+                                            <a href="#">Signature Rooms</a>
+                                            <a href="#">Signature Rooms</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Ẩm thực
-</a>
+                                        <a href="#">Nhà hàng & bars
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Nhà hàng 1</a>
+                                            <a href="#">Nhà hàng 2</a>
+                                            <a href="#">Nhà hàng 3</a>
+                                            <a href="#">Bars 1</a>
+                                            <a href="#">Bars 2</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Tiện nghi
-</a>
+                                        <a href="#">Giải trí
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Spa Center 1</a>
+                                            <a href="#">Spa Center 2</a>
+                                            <a href="#">Spa Center 3</a>
+                                            <a href="#">Karaoke Hai An 1</a>
+                                            <a href="#">Karaoke Hai An 2</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Hội nghị
-</a>
+                                        <a href="#">Hội thảo & Sự kiện
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Phòng hội nghị 1</a>
+                                            <a href="#">Phòng hội nghị 2</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Khuyến mại
-</a>
+                                        <a href="#">Ưu đãi
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Tất cả</a>
+                                            <a href="#">Phòng Nghỉ</a>
+                                            <a href="#">Nhà Hàng</a>
+                                            <a href="#">Tiện Nghi</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Địa điểm
-</a>
+                                        <a href="#">Thông tin
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Hoạt động</a>
+                                            <a href="#">Thông tin tuyển dụng</a>
+                                          </div>
                                     </li>
                                     <li class="main-nav">
-                                        <a href="#">Hình ảnh
-</a>
+                                        <a href="#">Thư viện
+                                        </a>
+
+                                    </li>
+                                    <li class="main-nav">
+                                        <a href="#ft-contact">Liên hệ
+                                        </a>
                                     </li>
                                 </ul>
 
@@ -197,34 +238,20 @@
                 <h3 class="title-text">Đặt phòng tại Hải An Hotel</h3>
               </div>
               <div class="frame-select-rooms">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 datestart">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 datestart">
                   <label for="check-in">Chọn ngày đến</label>
                   <!-- <input type="textfield" class="form-control" id="check-in" placeholder="12.20.2014"> -->
                   <input type="text"  class="form-control" id="start-date" name="start-date" placeholder="ngày/tháng/năm">
                   <i class="fa fa-calendar" aria-hidden="true"></i>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 dateend">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 dateend">
                   <label for="check-out">Chọn ngày đi</label>
                   <!-- <input type="textfield" class="form-control" id="check-out" placeholder="12.27.2014"> -->
                   <input type="text" class="form-control" id="end-date" name="end-date" placeholder="ngày/tháng/năm" ><i class="fa fa-calendar" aria-hidden="true"></i>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 whyselect">
-                  <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 whyleft">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 whyselect">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 whyleft">
                     <a href="#" class="btn-booking">Đặt phòng</a>
-                  </div>
-                  <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 whyright">
-                    <h5>Lý do chọn chúng tôi</h5>
-                    <ul>
-                      <li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i>Best rate guarantee
-                      </li>
-                      <li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i>Free wifi
-                      </li>
-                      <li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i>Exclusive Package
-                      </li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -391,7 +418,7 @@
 
 <!-- Contact open-->
 <section>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 box-contact">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 box-contact" id="ft-contact">
       <div class="container">
         <div class="in-contact">
           <h5 class="label">Contact</h5>
