--- a/Contact.html
+++ b/Contact.html
@@ -254,9 +254,32 @@
             </li>
           </ul>
         </div>
-        <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.1574235911858!2d105.84536565018267!3d21.02638619316726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab94163e3037%3A0xfb1f3e37fc5e76d5!2zVHJp4buHdSBRdeG7kWMgxJDhuqF0LCBUcuG6p24gSMawbmcgxJDhuqFvLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1514309662076" width="994" height="330" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 map-in-contact">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.1574235911858!2d105.84536565018267!3d21.02638619316726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab94163e3037%3A0xfb1f3e37fc5e76d5!2zVHJp4buHdSBRdeG7kWMgxJDhuqF0LCBUcuG6p24gSMawbmcgxJDhuqFvLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1514309662076" width="520" height="330" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 side-map">
+            <h4><strong>Gửi tin nhắn tới chúng tôi</strong></h4>
+            <form>
+              <div class="form-group">
+                <input type="text" class="form-control" name="" value="" placeholder="Họ và tên">
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" name="" value="" placeholder="Địa chỉ E-mail">
+              </div>
+              <div class="form-group">
+                <input type="tel" class="form-control" name="" value="" placeholder="Số điện thoại của bạn">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="" rows="3" placeholder="Tin nhắn"></textarea>
+              </div>
+              <button class="btn btn-default" type="submit" name="button">
+                  <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Gửi
+              </button>
+            </form>
+          </div>
         </div>
+
       </div>
 </div>
 </section>
