--- a/index.html
+++ b/index.html
@@ -198,19 +198,43 @@
                                             <li>
                                                 <a href="#">Phòng nghỉ
                                                 </a>
+                                                <ul class="dropdown-menu">
+                                                  <li> <a href="#"> Signature Rooms</a> </li>
+                                                  <li> <a href="#">Signature Rooms</a> </li>
+                                                  <li> <a href="#">Signature Rooms</a> </li>
+                                                  <li> <a href="#">Signature Rooms</a> </li>
+                                                </ul>
                                             </li>
 
                                             <li>
                                               <a href="#">Ẩm thực</a>
+                                              <ul class="dropdown-menu">
+                                                <li> <a href="#"> Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                              </ul>
                                             </li>
                                             <li>
                                               <a href="#">Hội nghị</a>
+                                              <ul class="dropdown-menu">
+                                                <li> <a href="#"> Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                              </ul>
                                             </li>
                                             <li>
                                               <a href="#">Tiện nghi</a>
                                             </li>
                                             <li>
                                               <a href="#">Khuyến mại</a>
+                                              <ul class="dropdown-menu">
+                                                <li> <a href="#"> Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                                <li> <a href="#">Signature Rooms</a> </li>
+                                              </ul>
                                             </li>
                                             <li>
                                               <a href="#">Hình ảnh</a>
