update languages mobile
update html and css

--- a/index.html
+++ b/index.html
@@ -175,7 +175,20 @@
 
                         <!-- Navigation mobile open -->
                         <div class="menu-mobile">
+
                             <nav class="navbar navbar-inverse navbar-fixed-top inverse-custom">
+                              <div class="lang-mobile">
+                                <a href="#">
+                                  <ul>
+                                    <li>
+                                      <a class="active" href="#">Tiếng Việt</a>
+                                    </li>
+                                    <li>
+                                      <a href="#">English</a>
+                                    </li>
+                                  </ul>
+                                </a>
+                              </div>
                                 <div class="container-fluid">
                                     <div class="navbar-header navbar-header-mobile">
                                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
